Changes to Katie's "about"

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 
 
-<meta property="description" content="A website built through Hugo and blogdown.">
+<meta property="description" content="Research into Neurological Disorders at Technological University Dublin.">
 
 
 
@@ -64,9 +64,9 @@
 
 
 <div class="intro">
-          <h1>some QSO stuff</h1>
+          <h1>TU Dublin Neuro</h1>
 
-        <h2>A website built through Hugo and blogdown.</h2>
+        <h2>Research into Neurological Disorders at Technological University Dublin.</h2>
         
         <div><img class="center-image" src="images/brainCode.png" width="25%"/></div>
 
